--- a/.drone.yml
+++ b/.drone.yml
@@ -1,11 +1,16 @@
 # TODO: Running on ryan.chatterton@sharpnotions.com now acccount
 # TODO: Add tests
+
+clone:
+  git:
+    image: plugins/git
+    depth: 50
+
 pipeline:
   build:
     image: node:8
     commands:
       - yarn
-      - echo "create .env file"
       - ./scripts/ci/build_env.sh
     secrets: [ slack_token ]
 
@@ -17,19 +22,19 @@ pipeline:
     when:
       branch: master
 
-  # notify:
-  #   image: plugins/slack
-  #   webhook: ${SLACK_WEBHOOK}
-  #   channel: ten-hour-projects
-  #   username: drone
-  #   icon_url: https://discourse.drone.io/uploads/drone/original/1X/3c1169460330cd8c88c9da925e7bbbd7ace83200.png
-  #   secrets: [ slack_webhook ]
-  #   when:
-  #     branch: master
-  #     status: [ success, failure]
-  #   template: >
-  #     {{#success build.status}}
-  #       [<{{ build.link }}|#{{ build.number }}> {{ build.event }}] {{ repo.owner }}/{{ repo.name }} ({{ build.author }}, build succeeded). :rocket:
-  #     {{else}}
-  #       [<{{ build.link }}|#{{ build.number }}> {{ build.event }}] {{ repo.owner }}/{{ repo.name }} ({{ build.author }}, build Failed). :skull:
-  #     {{/success}}
+  notify:
+    image: plugins/slack
+    webhook: ${SLACK_WEBHOOK}
+    channel: ten-hour-projects
+    username: drone
+    icon_url: https://discourse.drone.io/uploads/drone/original/1X/3c1169460330cd8c88c9da925e7bbbd7ace83200.png
+    secrets: [ slack_webhook ]
+    when:
+      branch: master
+      status: [ success, failure]
+    template: >
+      {{#success build.status}}
+        [<{{ build.link }}|#{{ build.number }}> {{ build.event }}] {{ repo.owner }}/{{ repo.name }} ({{ build.author }}, build succeeded). :rocket:
+      {{else}}
+        [<{{ build.link }}|#{{ build.number }}> {{ build.event }}] {{ repo.owner }}/{{ repo.name }} ({{ build.author }}, build Failed). :skull:
+      {{/success}}
