--- a/.drone.yml
+++ b/.drone.yml
@@ -1,13 +1,7 @@
 # TODO: Running on ryan.chatterton@sharpnotions.com now acccount
 # TODO: Add tests
-
-clone:
-  git:
-    image: plugins/git
-    depth: 50
-
 pipeline:
-  build:
+  build_pr:
     image: node:8
     commands:
       - yarn
@@ -16,15 +10,15 @@ pipeline:
 
   deploy_now:
     image: lucap/drone-now
-    alias: pantry-list-slack-bot
+    alias: pantry-list-slack-bot.now.sh
     team: sharpnotions
     secrets: [ now_token ]
     when:
       branch: master
+      event: push
 
   notify:
     image: plugins/slack
-    webhook: ${SLACK_WEBHOOK}
     channel: ten-hour-projects
     username: drone
     icon_url: https://discourse.drone.io/uploads/drone/original/1X/3c1169460330cd8c88c9da925e7bbbd7ace83200.png
