chore(ci): update webhook

--- a/.drone.yml
+++ b/.drone.yml
@@ -20,11 +20,13 @@ pipeline:
   notify:
     image: plugins/slack
     channel: ten-hour-projects
+    webhook: ${SLACK_WEBHOOK}
     username: drone
     icon_url: https://discourse.drone.io/uploads/drone/original/1X/3c1169460330cd8c88c9da925e7bbbd7ace83200.png
     secrets: [ slack_webhook ]
     when:
       branch: master
+      event: push
       status: [ success, failure]
     template: >
       {{#success build.status}}
