--- a/.drone.yml
+++ b/.drone.yml
@@ -10,6 +10,7 @@ pipeline:
 
   deploy_now:
     image: lucap/drone-now
+    deploy_name: pantry-list-slack-bot
     alias: pantry-list-slack-bot
     team: sharpnotions
     secrets: [ now_token ]
