--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ pipeline:
     commands:
       - yarn
       - ./scripts/ci/build_env.sh
-    secrets: [ slack_token ]
+    secrets: [ slack_token, slack_webhook_url ]
 
   deploy_now:
     image: sharpnotionsllc/drone-now
