--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "dependencies": {
     "@slack/client": "^4.0.0",
-    "micro": "^9.1.0"
+    "micro": "^9.1.0",
+    "microrouter": "^3.1.1"
   },
   "devDependencies": {
     "micro-dev": "^2.2.0",
-    "ngrok": "^3.0.0",
-    "now": "^10.1.5"
+    "ngrok": "^3.0.0"
   }
 }
