fix: Deploy shouldn’t fail if SLACK_WEBHOOK_URL is missing

--- a/.drone.yml
+++ b/.drone.yml
@@ -14,7 +14,7 @@ pipeline:
     alias: pantry-list-slack-bot
     team: sharpnotions
     secrets: [ now_token ]
-    # cleanup: true
+    cleanup: true
     public: true
     when:
       branch: master
