feat: Add items to list via slash command (#6)
* feat: Add items to list via slash command

* Remove send call after fetch

* Fix addItem.js conflict

* Use process.env.PANTRY_LIST_API_URL

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
       "SLACK_TOKEN": "@slack_token",
       "SLACK_WEBHOOK_URL": "@slack_webhook_url",
       "SLACK_VERIFICATION_TOKEN": "@slack_verification_token",
-      "CHANNEL_ID": "C965FPQNQ"
+      "CHANNEL_ID": "C965FPQNQ",
+      "PANTRY_LIST_API_URL" : "https://pantry-list-api.herokuapp.com"
     }
   }
 }
