--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "micro": "^9.1.0",
     "microrouter": "^3.1.1",
     "node-fetch": "^2.1.2",
+    "ramda": "^0.25.0",
     "require-directory": "^2.1.1",
     "urlencoded-body-parser": "^2.0.1"
   },
