--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
       "SLACK_WEBHOOK_URL": "@slack_webhook_url",
       "SLACK_VERIFICATION_TOKEN": "@slack_verification_token",
       "CHANNEL_ID": "C965FPQNQ",
-      "PANTRY_LIST_API_URL" : "https://pantry-list-api.herokuapp.com"
+      "PANTRY_LIST_API_URL": "https://pantry-list-api.herokuapp.com",
+      "ADMIN_USER_NAME": "greg"
     }
   }
 }
