--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 SLACK_TOKEN=
 SLACK_WEBHOOK_URL=
 SLACK_VERIFICATION_TOKEN=
-CHANNEL_ID=
+CHANNEL_ID=CBWJD4Z1C
 PANTRY_LIST_API_URL=http://localhost:4000
 ADMIN_USER_NAME=greg
